# bedquilt

./: .gitignore  Cargo.toml  README.md
advent430/: .gitignore  Makefile  README.md  actions.c  advent.h  adventure.yaml  bedquilt.c  bedquilt.h  init.c  main.c  misc.c  saveresume.c  score.c  wasmglk.h
advent430/templates/: dungeon.h.tpl
crates/glulx-asm/: Cargo.toml  README.md
crates/glulx-asm/examples/: hello.rs
crates/glulx-asm/src/: assemble.rs  cast.rs  concise.rs  decoding_table.rs  error.rs  instr_def.rs  instr_impls.rs  items.rs  lib.rs  operands.rs  resolver.rs  strings.rs
crates/wasm2glulx/: Cargo.toml  build.rs
crates/wasm2glulx-spectest-macro/: Cargo.toml
crates/wasm2glulx-spectest-macro/src/: lib.rs
crates/wasm2glulx/bogoglulx/: README.md  exec.c  float.c  main.c  vm.c
crates/wasm2glulx/spec-tests/: README.md  call_indirect.wast  func.wast  memory_grow.wast  memory_size.wast  memory_trap.wast  nop.wast  ref_func.wast  select.wast  stack.wast  table_get.wast  table_grow.wast  table_set.wast  table_size.wast
crates/wasm2glulx/src/: codegen.rs  common.rs  data.rs  entrypoint.rs  error.rs  glk.rs  intrinsics.rs  layout.rs  lib.rs  main.rs  rt.rs  spectest.rs
crates/wasm2glulx/src/codegen/: arith.rs  classify.rs  control.rs  loadstore.rs  memory.rs  table.rs  toplevel.rs
crates/wasm2glulx/tests/: br.rs  bulk.rs  call_indirect.rs  conversions.rs  f64.rs  f64_cmp.rs  fac.rs  float_literals.rs  float_memory.rs  float_misc.rs  func.rs  if.rs  labels.rs  local_get.rs  local_set.rs  memory.rs  memory_copy.rs  memory_fill.rs  memory_grow.rs  memory_init.rs  ref_is_null.rs  ref_null.rs  select.rs  simd_address.rs  simd_bitwise.rs  simd_conversions.rs  simd_f32x4_arith.rs  simd_f32x4_rounding.rs  simd_f64x2_arith.rs  simd_f64x2_pmin_pmax.rs  simd_f64x2_rounding.rs  simd_i16x8_arith2.rs  simd_i16x8_q15mulr_sat_s.rs  simd_i32x4_dot_i16x8.rs  simd_i32x4_extmul_i16x8.rs  simd_i64x2_arith.rs  simd_i64x2_arith2.rs  simd_i8x16_arith.rs  simd_i8x16_cmp.rs  simd_int_to_int_extend.rs  (+17 more)
game-crates/: Cargo.toml
game-crates/bedquilt/: Cargo.toml
game-crates/bedquilt-io/: Cargo.toml
game-crates/bedquilt-io/examples/: echo.rs
game-crates/bedquilt-io/src/: error.rs  fs.rs  lib.rs  random.rs  reactor.rs  sound.rs  sync.rs  task.rs  time.rs  win.rs
game-crates/bedquilt-io/src/sys/: mod.rs
game-crates/bedquilt-io/src/sys/wasm2glulx/: glk.rs  io.rs  mod.rs  mutex.rs  random.rs
game-crates/bedquilt-sys/: Cargo.toml
game-crates/bedquilt-sys/src/: glk.rs  glulx.rs  lib.rs
game-crates/bedquilt/src/: lib.rs
game-crates/wasm2glulx-ffi/: Cargo.toml  README.md
game-crates/wasm2glulx-ffi/src/: glk.rs  glulx.rs  lib.rs
manual/src/: SUMMARY.md  entrypoint.md  glk.md  glulx-asm.md  intro.md
manual/src/wasm2glulx/: bugs.md  cli.md  entrypoint.md  extensions.md  faq.md  glk.md  hll.md  intrinsics.md  intro.md
tool-crates/: Cargo.toml
tool-crates/bedquilt-graphdb-compiler/: Cargo.toml
tool-crates/bedquilt-graphdb-compiler/src/: ast.rs  lib.rs  whitespace.rs
tool-crates/glulx-asm/: Cargo.toml  LICENSE.md
tool-crates/glulx-asm/src/: assemble.rs  decoding_table.rs  error.rs  instr_def.rs  instr_impls.rs  lib.rs  resolver.rs  strings.rs
tool-crates/wasm2glulx/: Cargo.toml  README.md
tool-crates/wasm2glulx/bogoglulx/: files.c  float.c  funcs.c  gestalt.c  glulxe.h  heap.c  opcodes.h  operand.c  osdepend.c  search.c
tool-crates/wasm2glulx/spec-tests/: block.wast  br_table.wast  bulk.wast  call.wast  float_exprs.wast  loop.wast  memory.wast  ref_is_null.wast  simd_const.wast  table_copy.wast  table_fill.wast  table_get.wast  table_grow.wast  table_init.wast  table_set.wast  table_size.wast  trivial.wast
tool-crates/wasm2glulx/src/: common.rs  entrypoint.rs  error.rs  glk.rs  intrinsics.rs  layout.rs  rt.rs  spectest.rs
tool-crates/wasm2glulx/src/codegen/: control.rs  memory.rs  table.rs  toplevel.rs
tool-crates/wasm2glulx/tests/: address.rs  align.rs  block.rs  br_if.rs  br_table.rs  call.rs  const.rs  endianness.rs  f32.rs  f32_bitwise.rs  f32_cmp.rs  f64_bitwise.rs  float_exprs.rs  forward.rs  i32.rs  i64.rs  int_exprs.rs  int_literals.rs  left-to-right.rs  load.rs  local_tee.rs  loop.rs  memory_redundancy.rs  memory_size.rs  memory_trap.rs  nop.rs  ref_func.rs  return.rs  simd_align.rs  simd_bit_shift.rs  simd_boolean.rs  simd_const.rs  simd_f32x4.rs  simd_f32x4_cmp.rs  simd_f32x4_pmin_pmax.rs  simd_f64x2.rs  simd_f64x2_cmp.rs  simd_i16x8_arith.rs  simd_i16x8_cmp.rs  simd_i16x8_extadd_pairwise_i8x16.rs  (+26 more)
