[package]
name = "wasm2glulx"
version = "0.1.0"
authors = ["Daniel Fox Franke <dfoxfranke@gmail.com>"]
edition = "2021"
description = "Translate WebAssembly into Glulx"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/dfoxfranke/bedquilt"
keywords = ["glulx"]
categories = ["compilers", "wasm"]

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive", "wrap_help"] }
glulx-asm = { version = "0.1", path = "../glulx-asm" }
hex = { version = "0.4", optional = true }
walrus = "0.22"
wast = { version = "212", optional = true }

[dev-dependencies]
wasm2glulx = { path = ".", features = ["spectest"] }
wasm2glulx-spectest-macro = { path = "../wasm2glulx-spectest-macro" }

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = []
spectest = ["dep:hex", "dep:wast", "dep:cc"]
