[package]
name = "bedquilt-sys"
version = "0.1.0"
authors = ["Daniel Fox Franke <dfoxfranke@gmail.com>"]
edition = "2021"
description = "Low-level bindings to the Wasm2Glulx API"
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/dfoxfranke/bedquilt"
keywords = ["glulx", "glk", "bedquilt", "wasm2glulx"]
categories = ["wasm", "games"]

[dependencies]
bitflags = "2"
num_enum = { version = "0.7", default-features = false }