[package]
name = "bedquilt-graphdb-compiler"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
proc-macro2 = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing", "full", "extra-traits"] }
quote = { version = "1", default-features = false }
